# CppSnake

./: .gitignore  .gitmodules  Apple  Apple.hpp  CMakeLists.txt  IndexBuffer  IndexBuffer.hpp  Quad  Quad.hpp  README.md  Random  Random.hpp  Renderer  Renderer.hpp  Shader  Shader.hpp  Snake  Snake.hpp  Vertex  Vertex.h  Vertex.hpp  VertexArray  VertexArray.hpp  VertexBuffer  VertexBuffer.hpp  VertexBufferLayout  VertexBufferLayout.hpp  main.cpp  meson.build
res/: fragment.shader  vertex.shader
subprojects/glad/: CMakeLists.txt
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
